# Fan-Speed-Control

APP/: CMakeLists.txt  main.c
HAL/CLCD/: CLCD_program.c
HAL/DC_motor/: DC_motor_config.h  DC_motor_interface.h  DC_motor_private.h  DC_motor_program.c
HAL/LM35/: LM35_program.c
LIB/: std_types.h
MCAL/ADC/: ADC_private.h  ADC_program.c
MCAL/DIO/: DIO_interface.h  DIO_private.h  DIO_program.c
MCAL/Timer0/: TIMER0_config.h  TIMER0_interface.h  TIMER0_private.h  TIMER0_program.c
MCAL/Timer1/: TIMER1_interface.h  TIMER1_private.h  TIMER1_program.c
SERVICES/: Config.h  SERVICES.c  SERVICES.h  private.h
